# scrapper-challenge

./: README.md  database.db  pyproject.toml  scrapy.cfg
challenge/: middlewares.py  settings.py
challenge/infra/: storage.py
challenge/spiders/: istock_spider.py
src/: settings.py
src/infra/: storage.py
src/spiders/: free_images.py  istock.py
tests/: test_istock_spider.py
tests/responses/: fake_response.py
tests/responses/samples/: first_page.html  last_page.html  second_page.html
