[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["Vitor Toledo <pr.vitortoledo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.1"
black = "^24.3.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
